<resources>
    <string name="app_name">MenuAchat</string>
    <string name="title_activity_create_article">CreateArticle</string>

    <string name="button_comfirmer">Comfirmer</string>
    <string name="button_annuler">Annuler</string>

    <string name="erreur_champ_non_remplis">Un champ n\'est pas rempli</string>
    <string name="erreur_nom_deja_pris"> est déjà pris</string>

    <string name="text_nom">Nom</string>
    <string name="text_couleur">Couleur</string>
    <string name="text_entrezCouleurIci">Entrez la couleur ici</string>
    <string name="text_bleu">Bleu</string>
    <string name="text_rouge">Rouge</string>
    <string name="text_vert">Vert</string>
    <string name="text_value_0">0</string>
    <string name="text_value_255">255</string>
    <string name="text_voici_la_couleur_du_text">Voici la couleur du texte</string>
    <string name="text_categorie_rajout_comfirmation">Votre catégorie a été rajoutée</string>
    <string name="text_article_rajout_comfirmation">Votre Article a été rajoutée</string>
    <string name="textCategorie">Catégorie</string>
    <string name="text_entrez_nom_ici">Entrez le nom ici</string>
    <string name="text_plus">+</string>
    <string name="text_poidsFixe">Poids Fixe</string>
    <string name="text_codeBar">CodeBar</string>
    <string name="text_combien_de">Combien de </string>
    <string name="text_combien_de_gramme">Combien de gramme de</string>
    <string name="text_voulez_vous"> voulez vous ?</string>

    <string name="title_addCategorieArticle">Ajouter une catégorie d\'article</string>
    <string name="title_addArticle">Ajouter un article</string>
    <string name="title_takeArticle">Sélectionner des articles</string>

    <string name="debug_no_activity_add_cat_article">Impossible de trouver activité pour créé une categorie</string>
    <string name="debug_todo">Pas encore fait ^^</string>
    <string name="debug_no_activity_add_article">Impossible de trouver activité pour créé un article</string>
    <string name="debug_unknow_activity">Activité inconnu</string>
    <string name="img_descrip_poidsFixe">poidsFixe</string>

</resources>
