<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="356dp"
            android:layout_height="31dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:text="@string/title_addCategorieArticle"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/comfirmButton"
            android:layout_width="177dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:text="@string/button_comfirmer"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/AnnulerButton" />

        <Button
            android:id="@+id/AnnulerButton"
            android:layout_width="175dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/button_annuler"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textNomCat"
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/text_nom"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/editNomCat"
            android:layout_width="254dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:hint="@string/text_entrez_nom_ici"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/textNomCat"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/editCouleur"
            android:layout_width="246dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:text="@string/text_entrezCouleurIci"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/comfirmButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textCouleur"
            app:layout_constraintTop_toBottomOf="@+id/editNomCat" />

        <TextView
            android:id="@+id/textCouleur"
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical|center_horizontal"
            android:text="@string/text_couleur"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/AnnulerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNomCat" />
    </android.support.constraint.ConstraintLayout>
</layout>